Attempt to fix extra white space around home page slide captions in some mobile browsers More documentation additions

--- a/styles/umw-outreach-mods.css
+++ b/styles/umw-outreach-mods.css
@@ -592,6 +592,7 @@ footer.site-footer .widget {
 		on mobile, rather than appearing as an overlay, and make the caption text visible
 	 */
 	.home-top .flexslider .slide-caption {
+		margin: 0 !important;
 		background: #002b5a;
 		position: static;
 	}
